force-app/main/default/objects/Feedback__c/fields/Answer_1__c.field-meta.xml
<CustomField>
    <fullName>Answer_1__c</fullName>
    <label>Answer 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>