force-app/main/default/objects/Feedback__c/fields/Question_1__c.field-meta.xml
<CustomField>
    <fullName>Question_1__c</fullName>
    <label>Question 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>