force-app/main/default/objects/Feedback__c/fields/Question_3__c.field-meta.xml
<CustomField>
    <fullName>Question_3__c</fullName>
    <label>Question 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>